syntax = "proto3";

option java_package = "com.chan.cart.proto";
option java_multiple_files = true;

message Cart {
  repeated CartItem items = 1;
}

message CartItem {
  string product_id = 1;
  string product_name = 2;
  string image_url = 3;
  int32 origin_price = 4;
  int32 discounted_price = 5;
  int32 quantity = 6;
  bool is_selected = 7;
}
